Mengganti gambar pada element

--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
             <div class="clock-container">
                 <div class="time">
                     <div class="music-image">
-                        <img src="./Asset/WIN_20240813_07_11_02_Pro.jpg">
+                        <img src="./Asset/Image Night.jpg">
                     </div>
                     <h2>1</h2>
                 </div>
